[project]
name = "langgraph-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.4",
    "langchain-google-vertexai>=2.0.23",
    "langgraph>=0.4.3",
    "requests>=2.32.3",
]
